wilson maze done